# Pollymarket

./: .env.example  .gitignore  README.md  config.yaml.example  pyproject.toml
configs/: market_allowlist.yaml  market_denylist.yaml  promotion_controller.yaml
docs/: KEY_ROTATION_RUNBOOK.md  QUOTEABLE_WINDOW_MONITOR_DEPLOY.md  QUOTEABLE_WINDOW_MONITOR_REVIEW_RUNBOOK.md  STRATEGY_POLY_MM_V1.md  V1_SCOPE_FREEZE.md  compliance_checklist.md
ops/systemd/: pm-book-listener.service  pm-daily-report.service  pm-discovery.service  pm-heartbeat.service  pm-inventory.service  pm-order-router.service  pm-quoteable-window-monitor.service  pm-quoteable-window-monitor.timer  pm-settlement.service  pm-strategy-mm.service
src/: __init__.py  app.py  config.py
src/common/: http_client.py  paths.py
src/discovery/: __init__.py  client.py  service.py
src/execution/: __init__.py  heartbeat.py  order_router.py
src/inventory/: __init__.py  manager.py  proxy_relayer.py
src/marketdata/: __init__.py  history.py  orderbook_listener.py  reconciliation.py  trade_tape.py
src/ops/: __init__.py  disarm_controller.py  geoblock.py  promotion_controller.py  promotion_policy.py  run_manifest.py  runtime_event_logger.py  venue_identity.py  venue_smoke.py
src/registry/: __init__.py  (+3 more)
tests/: test_discovery_service.py  test_ops_smoke.py  test_parity_and_latency.py  test_promotion_controller.py  test_proxy_inventory_alignment.py  test_quote_and_fair_value.py  test_quoteable_window_monitor.py  test_registry_filters.py  test_risk_and_settlement.py  test_run_manifest.py  test_shadow_a.py
(+17 files in other folders)
